--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ table{
     border-collapse:collapse;
     margin-left: auto;
     margin-right: auto;
+    
     width: 40%;
     border:4px solid white;
     }
@@ -32,6 +33,7 @@ th, td {
 .result{
     color: black;
     font-weight: bold;
+    font-size: 20px;
     
     background-color: #4CAF50;
 
@@ -67,6 +69,7 @@ th, td {
 
 
 .glow-on-hover {
+    font-weight: bold;
     width: 220px;
     height: 50px;
     border: none;
