--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     padding: 2%;
     color: white;
     background-color: black;
+    flex: auto;
 }
 .hidden{
     display:none;
@@ -21,12 +22,12 @@ table{
     margin-left: auto;
     margin-right: auto;
     
-    width: 40%;
+    width: 70%;
+    
     border:4px solid white;
     }
 
 th, td {
-
     text-align: center;
     }
 
@@ -56,6 +57,8 @@ th, td {
     border:none;
 }
 .bold{
+    color:black;
+    background-color: white;
     font-weight: bold;
     font-size: 25px;
 }
@@ -63,9 +66,22 @@ th, td {
     font-weight: bold;
     font-size: 20px;
 }
+.nesviti{
+    background-color: black;
+}
+.sviti{
+    background-color: rgb(42, 42, 252);
+}
 
 
-
+.blika{
+    animation: blink 1s step-end infinite;
+}
+@keyframes blink{
+     50% { 
+        background-color: rgb(42, 42, 252);
+         }
+}
 
 
 .glow-on-hover {
