--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 strong {font-weight:bold;}
 h1{
-
     color: white;
     font: bold;
-    background-color: black;
 }
 
 
@@ -11,19 +9,18 @@ body {
     text-align: center;
     padding: 2%;
     color: white;
-    background-color: black;
+    background-color:rgb(45, 41, 41);
     flex: auto;
 }
 .hidden{
     display:none;
 }
+
 table{
     border-collapse:collapse;
     margin-left: auto;
     margin-right: auto;
-    
     width: 70%;
-    
     border:4px solid white;
     }
 
@@ -35,17 +32,23 @@ th, td {
     color: black;
     font-weight: bold;
     font-size: 20px;
-    
     background-color: #4CAF50;
 
 }
+
+.info_btn{
+    background-color: black;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+
 .button {
     background-color: lightgrey; /* Green */
     border: none;
     color: black;
     padding: 20px 40px;
     text-align: center;
-    
     
     display: inline-block;
     font-size: 16px;
@@ -68,33 +71,6 @@ th, td {
     font-weight: bold;
     font-size: 20px;
 }
-.nesviti_btn{
-    background-color: black;
-    text-align: center;
-    color: white;
-    width: 100%;
-    height: 100%;
-   
-}
-.sviti_btn{
-    background-color: rgb(42, 42, 252);
-    text-align: center;
-    color: white;
-    width: 100%;
-    height: 100%;
-}
-
-
-.blika_btn{
-    text-align: center;
-    color: white;
-    display: inline-block;
-    animation: blink 1s step-end infinite;
-    width: 100%;
-    height: 100%;   
-}
-
-
 
 .nesviti{
     background-color: black;
@@ -109,6 +85,7 @@ th, td {
 }
 
 .blika{
+    background-color: black;
     animation: blink 1s step-end infinite;
     text-align: center;
     color: white;
@@ -119,7 +96,6 @@ th, td {
         background-color: rgb(42, 42, 252);
          }
 }
-
 
 .glow-on-hover {
     font-weight: bold;
