--- a/Users_IP/style.css
+++ b/Users_IP/style.css
@@ -2,8 +2,11 @@ strong {font-weight:bold;}
 h1{
     color: white;
     font: bold;
-}
+    background-color:rgb(0,0,0);
+    width: 100%;
 
+
+}
 
 body {
     text-align: center;
@@ -12,53 +15,28 @@ body {
     background-color:rgb(45, 41, 41);
     flex: auto;
 }
-.hidden{
-    display:none;
-}
-
-table{
-    border-collapse:collapse;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    border:4px solid white;
-    }
-
-th, td {
-    text-align: center;
-    }
-
-.result{
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-    background-color: #4CAF50;
-
-}
-
-.info_btn{
-    background-color: black;
-    text-align: center;
-    color: white;
-    font-size: 20px;
-}
-
-.button {
-    background-color: lightgrey; /* Green */
-    border: none;
-    color: black;
-    padding: 20px 40px;
-    text-align: center;
-    
-    display: inline-block;
-    font-size: 16px;
-    font-weight: bold;
-    
-  }
 .button_table{
     text-align: center;
     width: 0%;
     border:none;
+}
+table{
+    border-collapse:collapse;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 100%;
+    border:none;
+
+}
+
+th, td {
+    text-align: center;
+    
+}
+
+.hidden{
+    display:none;
 }
 
 .bold{
@@ -67,34 +45,10 @@ th, td {
     font-weight: bold;
     font-size: 25px;
 }
+
 .bold2{
     font-weight: bold;
     font-size: 20px;
-}
-
-.nesviti{
-    background-color: black;
-    text-align: center;
-    color: white;
-}
-
-.sviti{
-    background-color: rgb(42, 42, 252);
-    text-align: center;
-    color: white;
-}
-
-.blika{
-    background-color: black;
-    animation: blink 1s step-end infinite;
-    text-align: center;
-    color: white;
-}
-
-@keyframes blink{
-     50% { 
-        background-color: rgb(42, 42, 252);
-         }
 }
 
 .glow-on-hover {
